feat: junto con @JocoolQ se agrega tabla dominio tipo documento y su respectivo modelo y controlador #15
